fixed fb
fb embed was not fitting into container properly.

--- a/css/waves.css
+++ b/css/waves.css
@@ -18,7 +18,12 @@ html,body{
 
 h1{
     font-size: 8vw;
-     
+    border-bottom-width: 10px;
+   
+    border-bottom-style: solid;
+ 
+    text-align: left;
+    padding-left:8;
 }
 
 h3{
